--- a/index.ipynb
+++ b/index.ipynb
@@ -89,13 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "email = \"art.vandelay@vandelay.co\""
+    "email = \"art.vandelay@vandelay.co\"\n"
    ]
   },
   {
